Other fixes (align items vertically)

--- a/src/slider.scss
+++ b/src/slider.scss
@@ -10,6 +10,10 @@
     min-height: 100%;
 }
 
+.swiper-wrapper {
+    align-items: center;
+}
+
 .swiper-pagination-bullets {
 }
 
